<resources>
    <string name="app_name">Граждане</string>
    <string name="name">Имя</string>
    <string name="gender">Пол</string>
    <string name="age">Возраст</string>
    <string name="settings">Настройки</string>
    <string name="refresh">Обновить</string>
    <string name="car">Автомобиль</string>
    <string name="living_place">Район проживания</string>
    <string name="work_place">Место работы</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>

</resources>